; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_service_supports_multitrack.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_service_supports_multitrack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_output = type { %struct.obs_service* }
%struct.obs_service = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 (i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_output*)* @service_supports_multitrack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @service_supports_multitrack(%struct.obs_output* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.obs_output*, align 8
  %4 = alloca %struct.obs_service*, align 8
  store %struct.obs_output* %0, %struct.obs_output** %3, align 8
  %5 = load %struct.obs_output*, %struct.obs_output** %3, align 8
  %6 = getelementptr inbounds %struct.obs_output, %struct.obs_output* %5, i32 0, i32 0
  %7 = load %struct.obs_service*, %struct.obs_service** %6, align 8
  store %struct.obs_service* %7, %struct.obs_service** %4, align 8
  %8 = load %struct.obs_service*, %struct.obs_service** %4, align 8
  %9 = icmp ne %struct.obs_service* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.obs_service*, %struct.obs_service** %4, align 8
  %12 = getelementptr inbounds %struct.obs_service, %struct.obs_service* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32 (i32)*, i32 (i32)** %13, align 8
  %15 = icmp ne i32 (i32)* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %10, %1
  store i32 0, i32* %2, align 4
  br label %27

17:                                               ; preds = %10
  %18 = load %struct.obs_service*, %struct.obs_service** %4, align 8
  %19 = getelementptr inbounds %struct.obs_service, %struct.obs_service* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32 (i32)*, i32 (i32)** %20, align 8
  %22 = load %struct.obs_service*, %struct.obs_service** %4, align 8
  %23 = getelementptr inbounds %struct.obs_service, %struct.obs_service* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 %21(i32 %25)
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %17, %16
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
